--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "BlockIo Implement",
+    "name": "BlockIo-Implement",
     "description": "A Laravel package/facade for the Block.io API PHP wrapper.",
     "keyword": ["laravel", "bitcoin", "litecoin", "dogecoin", "blockchain", "wallet", "blockio"],
     "license": "MIT",
