--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
-    "name": "BlockIo-Implement",
+    "name": "aquinow/blockio",
     "description": "A Laravel package/facade for the Block.io API PHP wrapper.",
     "keyword": ["laravel", "bitcoin", "litecoin", "dogecoin", "blockchain", "wallet", "blockio"],
+	"version": "1.1",
     "license": "MIT",
     "authors": [
         {
@@ -11,6 +12,11 @@
         {
             "name": "Kaushik Subramaniam Gnanaskandan",
             "email": "kaushik.subman@gmail.com"
+        },
+		{
+            "name": "Felipe Aquino",
+            "email": "felipeaquinoensina@gmail.com",
+			"role": "edit"
         }
     ],
     "require": {
@@ -27,7 +33,7 @@
     },
     "autoload": {
         "psr-4": {
-            "BlockIoImplement\\LaraBlockIo\\": "src/"
+            "blockavel\\LaraBlockIo\\": "src/"
         }
     }
 }
