--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "autoload": {
         "psr-4": {
-            "blockavel\\LaraBlockIo\\": "src/"
+            "Aquino\\BlockIo\\": "src/"
         }
     }
 }
